Cleans up spacing of horizontal stripes. Still need to fix centering

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ h2 {
   
 p#tagline{
   margin: auto 7%;
-  padding-bottom: 2em;
   font-style: italic;
   font-weight: normal;
   font-family: Georgia, serif;
@@ -125,12 +124,8 @@ ul#filter button {
   }
 
 .item {
-  /*width:70%;*/
-  min-height:220px;
-  /*margin:4em auto;*/
-  /*padding: 2em 1em;*/
   vertical-align: middle;
-  position:relative;
+  padding: 3em;
   }
 
 .item:nth-child(2n) {
@@ -140,7 +135,6 @@ ul#filter button {
 .portfolio-thumb {
   /*filter:alpha(opacity=90); */   /* ie  */
   /*opacity: 0.7;*/
-  margin-top: 5px;
   }
 
 .caption {
@@ -160,7 +154,7 @@ ul#filter button {
   color: #e03406;
   font-size:16px;
   /* add spacing and make the whole row clickable*/
-  padding:1em 0;
+  padding:1em 0 0 0 ;
   display:block;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
@@ -176,9 +170,9 @@ ul#filter button {
 }
 
 .caption p {
-  padding:5px;
+  padding:5px 0;
   margin:0;
-  font-size:.7em;
+  font-size:.8em;
   font-weight: normal;
   font-family: Arial, sans-serif;
   }
